--- a/.github/workflows/demo_job_ca.yaml
+++ b/.github/workflows/demo_job_ca.yaml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/first-interaction@v1.3.0
         with:
           # Token for the repository. Can be passed in using {{ secrets.GITHUB_TOKEN }}
-          repo-token: $GITHUB_TOKEN
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
           # Comment to post on an individual's first issue
           issue-message: Hi, you submitted first issue
           # Comment to post on an individual's first pull request
