--- a/.github/workflows/demo_docker_action.yaml
+++ b/.github/workflows/demo_docker_action.yaml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - name: docker-call
         id: hello
-        uses: actions/dockerfolder@v1-alpha
+        uses: vamshi-kk/Github-Actions-Demo@v1-alpha
         with:
           who-to-greet: 'Vamshi'
       - name: Print output time
